@@ -1,3 +1,4 @@
+* Remove phone from party when deleted
 * Add party identifier
 
 Version 1.4 - 2015-05-29
